tests/baselines/reference/templateStringInModuleNameES6.errors.txt
templateStringInModuleNameES6.ts(1,16): error TS1003: Identifier expected.
templateStringInModuleNameES6.ts(1,21): error TS1005: ';' expected.
templateStringInModuleNameES6.ts(4,16): error TS1003: Identifier expected.
templateStringInModuleNameES6.ts(4,24): error TS1005: ';' expected.


==== templateStringInModuleNameES6.ts (4 errors) ====
    declare module `M1` {
                   ~~~~
!!! error TS1003: Identifier expected.
                        ~
!!! error TS1005: ';' expected.
    }
    
    declare module `M${2}` {
                   ~~~~
!!! error TS1003: Identifier expected.
                           ~
!!! error TS1005: ';' expected.
    }